--- a/Example/RevealMenuController/Base.lproj/Main.storyboard
+++ b/Example/RevealMenuController/Base.lproj/Main.storyboard
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A304a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+    <device id="retina5_9" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,82 +18,81 @@
                         <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="uai-Qe-4Wf">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                             </imageView>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="20O-qF-T7i">
-                                <rect key="frame" x="473" y="90" width="107" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="107" id="arU-5t-nYd"/>
-                                    <constraint firstAttribute="height" constant="30" id="f7H-GM-3nM"/>
-                                </constraints>
-                                <state key="normal" title="Bottom Menu">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="presentActionScheet:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="gUa-Fv-JgF"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Xz-g0-MgK">
-                                <rect key="frame" x="244" y="90" width="113" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="113" id="8ko-CN-DBX"/>
-                                    <constraint firstAttribute="height" constant="30" id="oY9-jN-3Il"/>
-                                </constraints>
-                                <state key="normal" title="Center Menu">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="presentActionScheet:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="xQg-HK-LFH"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZWy-qk-vwB">
-                                <rect key="frame" x="20" y="90" width="83" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="83" id="aLl-Lg-8Eg"/>
-                                    <constraint firstAttribute="height" constant="30" id="eNs-lz-bTQ"/>
-                                </constraints>
-                                <state key="normal" title="Top Menu">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="presentActionScheet:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FTv-7k-61R"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RevealMenuController Example" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8jh-A0-cit">
-                                <rect key="frame" x="20" y="20" width="560" height="60"/>
+                                <rect key="frame" x="16" y="44" width="343" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="DGU-rB-clr"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Noteworthy-Light" family="Noteworthy" pointSize="21"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="S6g-79-3i1">
+                                <rect key="frame" x="16" y="114" width="343" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZWy-qk-vwB">
+                                        <rect key="frame" x="0.0" y="0.0" width="114.33333333333333" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="eNs-lz-bTQ"/>
+                                        </constraints>
+                                        <state key="normal" title="Top Menu">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="presentActionScheet:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="FTv-7k-61R"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Xz-g0-MgK">
+                                        <rect key="frame" x="114.33333333333334" y="0.0" width="114.33333333333334" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="oY9-jN-3Il"/>
+                                        </constraints>
+                                        <state key="normal" title="Center Menu">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="presentActionScheet:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="xQg-HK-LFH"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="20O-qF-T7i">
+                                        <rect key="frame" x="228.66666666666666" y="0.0" width="114.33333333333334" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="f7H-GM-3nM"/>
+                                        </constraints>
+                                        <state key="normal" title="Bottom Menu">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="presentActionScheet:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="gUa-Fv-JgF"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="8jh-A0-cit" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="CXf-Mz-1ar"/>
+                            <constraint firstItem="uai-Qe-4Wf" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="EmK-Tq-4gw"/>
                             <constraint firstItem="8jh-A0-cit" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="GWX-Z1-I6h"/>
-                            <constraint firstItem="uai-Qe-4Wf" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-20" id="S8V-Tp-vMy"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="uai-Qe-4Wf" secondAttribute="trailing" constant="-20" id="bM3-uh-O1Q"/>
-                            <constraint firstItem="ZWy-qk-vwB" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="70" id="cJj-37-Lf9"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="uai-Qe-4Wf" secondAttribute="bottom" id="e7S-w3-tMN"/>
-                            <constraint firstItem="3Xz-g0-MgK" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="70" id="iyB-Bw-Hr2"/>
-                            <constraint firstItem="20O-qF-T7i" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="70" id="ouo-xI-RqZ"/>
-                            <constraint firstItem="20O-qF-T7i" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="ovr-jU-AF7"/>
+                            <constraint firstItem="S6g-79-3i1" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="Mcp-tk-qsL"/>
+                            <constraint firstItem="uai-Qe-4Wf" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="VhZ-yo-OTs"/>
+                            <constraint firstAttribute="bottom" secondItem="uai-Qe-4Wf" secondAttribute="bottom" id="Vks-T8-JPE"/>
+                            <constraint firstItem="S6g-79-3i1" firstAttribute="top" secondItem="8jh-A0-cit" secondAttribute="bottom" constant="10" id="aMw-aa-Xz4"/>
                             <constraint firstItem="8jh-A0-cit" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="pdk-FX-fIo"/>
-                            <constraint firstItem="3Xz-g0-MgK" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="qGD-85-bAt"/>
-                            <constraint firstItem="uai-Qe-4Wf" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="tNp-KK-eoe"/>
-                            <constraint firstItem="ZWy-qk-vwB" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="yYE-GO-Xns"/>
+                            <constraint firstAttribute="trailing" secondItem="uai-Qe-4Wf" secondAttribute="trailing" id="v1J-bF-dg3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="S6g-79-3i1" secondAttribute="trailing" id="yUt-Uh-HHY"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="496" y="363"/>
+            <point key="canvasLocation" x="495.19999999999999" y="362.06896551724139"/>
         </scene>
     </scenes>
     <resources>
